--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "start": "run-p start:mqtt-client start:mqtt-broker start:esp-pir-manager",
+    "start:mqtt-client": "nx serve mqtt-client",
+    "build:mqtt-client": "nx build mqtt-client",
+    "test:mqtt-client": "nx test mqtt-client",
+    "start:mqtt-broker": "nx serve mqtt-broker",
+    "build:mqtt-broker": "nx build mqtt-broker",
+    "test:mqtt-broker": "nx test mqtt-broker",
+    "start:esp-pir-manager": "nx serve esp-pir-manager",
+    "build:esp-pir-manager": "nx build esp-pir-manager",
+    "test:esp-pir-manager": "nx test esp-pir-manager",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -38,7 +45,14 @@
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
     "@nrwl/angular": "10.3.1",
+    "aedes": "^0.43.0",
+    "async-mqtt": "^2.6.1",
+    "date-fns": "^2.16.1",
+    "express": "4.17.1",
+    "ngx-mqtt": "^7.0.14",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
+    "websocket-stream": "^5.5.2",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
@@ -47,11 +61,16 @@
     "@angular/compiler-cli": "^10.1.0",
     "@angular/language-service": "^10.1.0",
     "@nrwl/cli": "10.3.1",
+    "@nrwl/cypress": "10.3.1",
+    "@nrwl/express": "^10.3.1",
     "@nrwl/jest": "10.3.1",
+    "@nrwl/node": "10.3.1",
     "@nrwl/workspace": "10.3.1",
+    "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
+    "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "jest": "26.2.2",
@@ -60,8 +79,6 @@
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~4.0.3",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "10.3.1"
+    "typescript": "~4.0.3"
   }
 }
