preparations for running with docker

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "start:mqtt-client": "nx serve mqtt-client",
     "build:mqtt-client": "nx build mqtt-client",
     "test:mqtt-client": "nx test mqtt-client",
+    "docker:mqtt-client": "docker build -t mqtt-client -f apps/mqtt-client/Dockerfile .",
     "start:mqtt-broker": "nx serve mqtt-broker",
     "build:mqtt-broker": "nx build mqtt-broker",
     "test:mqtt-broker": "nx test mqtt-broker",
+    "docker:mqtt-broker": "docker build -t mqtt-broker -f apps/mqtt-broker/Dockerfile .",
     "start:esp-pir-manager": "nx serve esp-pir-manager",
     "build:esp-pir-manager": "nx build esp-pir-manager",
     "test:esp-pir-manager": "nx test esp-pir-manager",
+    "docker:esp-pir-manager": "docker build -t esp-pir-manager -f apps/esp-pir-manager/Dockerfile .",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
