--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
     "build:esp-pir-manager": "nx build esp-pir-manager",
     "test:esp-pir-manager": "nx test esp-pir-manager",
     "docker:esp-pir-manager": "docker build -t esp-pir-manager -f apps/esp-pir-manager/Dockerfile .",
+    "start:esp-update-server": "nx serve esp-update-server",
+    "build:esp-update-server": "nx build esp-update-server",
+    "test:esp-update-server": "nx test esp-update-server",
+    "docker:esp-update-server": "docker build -t esp-update-server -f apps/esp-update-server/Dockerfile .",
+    "start:alexa-connector": "npm run create-env:alexa-connector && nx serve alexa-connector",
+    "build:alexa-connector": "npm run create-env:alexa-connector && nx build alexa-connector",
+    "test:alexa-connector": "nx test alexa-connector",
+    "create-env:alexa-connector": "node apps/alexa-connector/create-env.js",
+    "docker:alexa-connector": "docker build -t alexa-connector -f apps/alexa-connector/Dockerfile .",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -48,6 +57,7 @@
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
     "@nrwl/angular": "10.3.1",
+    "@types/node": "^14.14.0",
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
     "date-fns": "^2.16.1",
@@ -71,7 +81,6 @@
     "@nrwl/workspace": "10.3.1",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
