--- a/nx.json
+++ b/nx.json
@@ -34,6 +34,15 @@
     },
     "utils": {
       "tags": []
+    },
+    "esp-update-server": {
+      "tags": []
+    },
+    "adesso-commuter-server": {
+      "tags": []
+    },
+    "alexa-connector": {
+      "tags": []
     }
   }
 }
