--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "test:alexa-connector": "nx test alexa-connector",
     "create-env:alexa-connector": "node apps/alexa-connector/create-env.js",
     "docker:alexa-connector": "docker build -t alexa-connector -f apps/alexa-connector/Dockerfile .",
+    "start:adesso-commuter-server": "nx serve adesso-commuter-server",
+    "build:adesso-commuter-server": "nx build adesso-commuter-server",
+    "test:adesso-commuter-server": "nx test adesso-commuter-server",
+    "docker:adesso-commuter-server": "docker build -t adesso-commuter-server -f apps/adesso-commuter-server/Dockerfile .",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -61,10 +65,14 @@
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
     "date-fns": "^2.16.1",
+    "detect-rpi": "^1.4.0",
     "express": "4.17.1",
     "ngx-mqtt": "^7.0.14",
+    "puppeteer": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
+    "serve-index": "^1.9.1",
+    "typescript-ioc": "^3.2.2",
     "websocket-stream": "^5.5.2",
     "zone.js": "^0.10.2"
   },
