--- a/angular.json
+++ b/angular.json
@@ -405,11 +405,6 @@
         "linter": "tslint"
       }
     },
-    "@nrwl/cypress": {
-      "cypress-project": {
-        "linter": "tslint"
-      }
-    },
     "@nrwl/node": {
       "application": {
         "linter": "tslint"
@@ -435,8 +430,7 @@
       }
     },
     "@nrwl/angular:application": {
-      "unitTestRunner": "jest",
-      "e2eTestRunner": "cypress"
+      "unitTestRunner": "jest"
     },
     "@nrwl/angular:library": {
       "unitTestRunner": "jest"
