added env to angular client

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
+PUBLIC_ENDPOINT=http://my-services-endpoint.com
 AMAZON_EMAIL=amazon_account@email.address
 AMAZON_PASSWORD=Very_Secret_Amazon_Account_Password
 AMAZON_MFA_SECRET=1234 5678 9ABC DEFG HIJK LMNO PQRS TUVW XYZ0 1234 5678 9ABC DEFG
