--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "run-p start:mqtt-client start:mqtt-broker start:esp-pir-manager",
-    "start:mqtt-client": "nx serve mqtt-client",
-    "build:mqtt-client": "nx build mqtt-client",
+    "start:mqtt-client": "npm run create-env:mqtt-client && nx serve mqtt-client",
+    "build:mqtt-client": "npm run create-env:mqtt-client && nx build mqtt-client",
     "test:mqtt-client": "nx test mqtt-client",
     "docker:mqtt-client": "docker build -t mqtt-client -f apps/mqtt-client/Dockerfile .",
+    "create-env:mqtt-client": "node apps/mqtt-client/create-env.js",
     "start:mqtt-broker": "nx serve mqtt-broker",
     "build:mqtt-broker": "nx build mqtt-broker",
     "test:mqtt-broker": "nx test mqtt-broker",
