--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,6 @@
 PUBLIC_ENDPOINT=http://my-services-endpoint.com
+SERVICE_USER=me
+SERVICE_PASSWORD=s3cr3t
 AMAZON_EMAIL=amazon_account@email.address
 AMAZON_PASSWORD=Very_Secret_Amazon_Account_Password
 AMAZON_MFA_SECRET=1234 5678 9ABC DEFG HIJK LMNO PQRS TUVW XYZ0 1234 5678 9ABC DEFG
