--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "async-mqtt": "^2.6.1",
     "date-fns": "^2.16.1",
     "detect-rpi": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "ngx-mqtt": "^7.0.14",
     "puppeteer": "^4.0.0",
@@ -90,7 +91,6 @@
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
     "codelyzer": "~5.0.1",
-    "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
