--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "build:adesso-commuter-server": "nx build adesso-commuter-server",
     "test:adesso-commuter-server": "nx test adesso-commuter-server",
     "docker:adesso-commuter-server": "docker build -t adesso-commuter-server -f apps/adesso-commuter-server/Dockerfile .",
+    "start:api-gateway": "nx serve api-gateway",
+    "build:api-gateway": "nx build api-gateway",
+    "docker:api-gateway": "docker build -t api-gateway -f apps/api-gateway/Dockerfile .",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -69,6 +72,7 @@
     "detect-rpi": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "4.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "ngx-mqtt": "^7.0.14",
     "puppeteer": "^4.0.0",
     "reflect-metadata": "^0.1.13",
