improved docker performance

--- a/apps/adesso-commuter-server/Dockerfile
+++ b/apps/adesso-commuter-server/Dockerfile
@@ -8,12 +8,19 @@ COPY . .
 RUN npm run build:adesso-commuter-server -- --prod
 
 ######################################################################
+FROM node:14-alpine as prod-deps
+######################################################################
+WORKDIR /app
+ADD package.json /app/package.json
+RUN npm install --prod --ignore-scripts
+
+######################################################################
 FROM node:14-alpine
 ######################################################################
 WORKDIR /app
 RUN apk update && apk add chromium tzdata
 COPY --from=builder /app/dist/apps/adesso-commuter-server /app
-ADD package.json /app/package.json
-RUN npm install --prod --ignore-scripts
+COPY --from=prod-deps /app/node_modules /app/node_modules
+ADD .env /app/.env
 ENV TZ=Europe/Berlin
 CMD ["node", "./main.js"]
