--- a/apps/mqtt-broker/Dockerfile
+++ b/apps/mqtt-broker/Dockerfile
@@ -3,9 +3,16 @@ FROM node:14-alpine as builder
 ######################################################################
 WORKDIR /app
 COPY package.json yarn.lock decorate-angular-cli.js ./
-RUN npm install
+RUN export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && npm install
 COPY . .
 RUN npm run build:mqtt-broker -- --prod
+
+######################################################################
+FROM node:14-alpine as prod-deps
+######################################################################
+WORKDIR /app
+ADD package.json /app/package.json
+RUN npm install --prod --ignore-scripts
 
 ######################################################################
 FROM node:14-alpine
@@ -13,7 +20,7 @@ FROM node:14-alpine
 WORKDIR /app
 RUN apk update && apk add tzdata
 COPY --from=builder /app/dist/apps/mqtt-broker /app
-ADD package.json /app/package.json
-RUN npm install --prod --ignore-scripts
+COPY --from=prod-deps /app/node_modules /app/node_modules
+ADD .env /app/.env
 ENV TZ=Europe/Berlin
 CMD ["node", "./main.js"]
