--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/node": "^14.14.0",
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "detect-rpi": "^1.4.0",
     "dotenv": "^8.2.0",
