--- a/apps/esp-update-server/Dockerfile
+++ b/apps/esp-update-server/Dockerfile
@@ -1,26 +1,36 @@
 ######################################################################
-FROM node:14-alpine as builder
+FROM node:14-alpine as all-deps
 ######################################################################
 WORKDIR /app
 COPY package.json yarn.lock decorate-angular-cli.js ./
 RUN export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && npm install
+
+######################################################################
+FROM node:14-alpine as builder
+######################################################################
+WORKDIR /app
 COPY . .
+COPY --from=all-deps /app/node_modules /app/node_modules
+# specific:
 RUN npm run build:esp-update-server -- --prod
 
 ######################################################################
 FROM node:14-alpine as prod-deps
 ######################################################################
 WORKDIR /app
-ADD package.json /app/package.json
-RUN npm install --prod --ignore-scripts
+COPY package.json package-lock.json /app/
+# RUN npm install --prod --ignore-scripts
+RUN npm ci --production --ignore-scripts && npm cache clean --force
 
 ######################################################################
 FROM node:14-alpine
 ######################################################################
 WORKDIR /app
-RUN apk update && apk add tzdata
-COPY --from=builder /app/dist/apps/esp-update-server /app
 COPY --from=prod-deps /app/node_modules /app/node_modules
-ADD .env /app/.env
+COPY .env /app/.env
+# specific:
+COPY --from=builder /app/dist/apps/esp-update-server /app
+# specific:
+RUN apk update && apk add tzdata
 ENV TZ=Europe/Berlin
 CMD ["node", "./main.js"]
