--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,10 @@
-node_modules
-.git
+**/node_modules/
+**/.git
+**/README.md
+**/LICENSE
+**/.vscode
+**/npm-debug.log
+**/coverage
+**/.editorconfig
+**/.aws
+**/dist
