--- a/apps/alexa-connector/Dockerfile
+++ b/apps/alexa-connector/Dockerfile
@@ -1,27 +1,38 @@
 ######################################################################
-FROM node:14-alpine as builder
+FROM node:14-alpine as all-deps
 ######################################################################
 WORKDIR /app
 COPY package.json yarn.lock decorate-angular-cli.js ./
 RUN export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && npm install
+
+######################################################################
+FROM node:14-alpine as builder
+######################################################################
+WORKDIR /app
 COPY . .
+COPY --from=all-deps /app/node_modules /app/node_modules
+# specific:
 RUN npm run build:alexa-connector -- --prod
 
 ######################################################################
 FROM node:14-alpine as prod-deps
 ######################################################################
 WORKDIR /app
-ADD package.json /app/package.json
-RUN npm install --prod --ignore-scripts
+COPY package.json package-lock.json /app/
+# RUN npm install --prod --ignore-scripts
+RUN npm ci --production --ignore-scripts && npm cache clean --force
 
 ######################################################################
 FROM node:14-alpine
 ######################################################################
 WORKDIR /app
-RUN apk update && apk add curl jq oath-toolkit-oathtool tzdata
-COPY --from=builder /app/dist/apps/alexa-connector /app
 COPY --from=prod-deps /app/node_modules /app/node_modules
-ADD .env /app/.env
+COPY .env /app/.env
+# specific:
+COPY --from=builder /app/dist/apps/alexa-connector /app
+# specific:
+RUN apk update && apk add curl jq oath-toolkit-oathtool tzdata
+# specific:
 RUN chmod +x /app/assets/alexa-remote-control/alexa_remote_control.sh
 ENV TZ=Europe/Berlin
 CMD ["node", "./main.js"]
