--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
 SERVICE_USER=me
 SERVICE_PASSWORD=s3cr3t
+SERVICE_SECRET=some-very-secret-string
 AMAZON_EMAIL=amazon_account@email.address
 AMAZON_PASSWORD=Very_Secret_Amazon_Account_Password
 AMAZON_MFA_SECRET=1234 5678 9ABC DEFG HIJK LMNO PQRS TUVW XYZ0 1234 5678 9ABC DEFG
