--- a/package.json
+++ b/package.json
@@ -68,12 +68,15 @@
     "@types/node": "^14.14.0",
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "detect-rpi": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "4.17.1",
+    "express-jwt": "^6.0.0",
     "http-proxy-middleware": "^1.0.6",
+    "jsonwebtoken": "^8.5.1",
     "ngx-mqtt": "^7.0.14",
     "puppeteer": "^4.0.0",
     "reflect-metadata": "^0.1.13",
