--- a/apps/mqtt-client/Dockerfile
+++ b/apps/mqtt-client/Dockerfile
@@ -11,6 +11,7 @@ RUN npm run build:mqtt-client -- --prod
 FROM nginx:alpine
 ######################################################################
 COPY apps/mqtt-client/nginx.conf /etc/nginx/nginx.conf
+COPY ssh /app/ssh
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=builder /app/dist/apps/mqtt-client /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
