--- a/apps/mqtt-client/nginx.conf
+++ b/apps/mqtt-client/nginx.conf
@@ -3,7 +3,10 @@ events{}
 http {
     include /etc/nginx/mime.types;
     server {
-        listen 80;
+        listen 443 ssl;
+        ssl_certificate /app/ssh/fullchain.pem;
+        ssl_certificate_key /app/ssh/privkey.pem;
+        ssl_trusted_certificate /app/ssh/chain.pem;
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
