implemented prod and dev mode for all containers

--- a/apps/adesso-commuter-server/Dockerfile
+++ b/apps/adesso-commuter-server/Dockerfile
@@ -12,7 +12,8 @@ WORKDIR /app
 COPY . .
 COPY --from=all-deps /app/node_modules /app/node_modules
 # specific:
-RUN npm run build:adesso-commuter-server -- --prod
+ARG PRODUCTION
+RUN if [ "$PRODUCTION" = "true" ]; then npm run build:adesso-commuter-server -- --prod; else npm run build:adesso-commuter-server; fi
 
 ######################################################################
 FROM node:14-alpine as prod-deps
