--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "run-p start:mqtt-client start:mqtt-broker start:esp-pir-manager",
+    "docker:build:all:dev": "docker-compose build",
+    "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
+    "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose up -d",
+    "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
     "start:mqtt-client": "nx serve mqtt-client",
     "build:mqtt-client": "nx build mqtt-client",
     "test:mqtt-client": "nx test mqtt-client",
