improved docker images; added vendor script

--- a/apps/mqtt-client/Dockerfile
+++ b/apps/mqtt-client/Dockerfile
@@ -1,13 +1,18 @@
+ARG SERVICE_NAME=mqtt-client
+
 ######################################################################
-FROM node:14-alpine as builder
+FROM node:14-alpine as build
 ######################################################################
 WORKDIR /app
+
 COPY package.json yarn.lock decorate-angular-cli.js ./
 RUN export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && npm install
 COPY . .
+
 # specific:
 ARG PRODUCTION
-RUN if [ "$PRODUCTION" = "true" ]; then npm run build:mqtt-client -- --prod; else npm run build:mqtt-client; fi
+ARG SERVICE_NAME
+RUN if [ "$PRODUCTION" = "true" ]; then npm run build:$SERVICE_NAME -- --prod; else npm run build:$SERVICE_NAME; fi
 
 ######################################################################
 FROM nginx:alpine
@@ -19,8 +24,9 @@ ENV NGINXENV=${PRODUCTION:+prod}
 # if !PRODUCTION set NGINXENV to dev
 ENV NGINXENV=${NGINXENV:-dev}
 
+# specific:
 COPY apps/mqtt-client/nginx.$NGINXENV.conf /etc/nginx/nginx.conf
 COPY ssh /app/ssh
 RUN rm -rf /usr/share/nginx/html/*
-COPY --from=builder /app/dist/apps/mqtt-client /usr/share/nginx/html
+COPY --from=build /app/dist/apps/mqtt-client /usr/share/nginx/html
 CMD ["nginx", "-g", "daemon off;"]
