--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "run-p start:mqtt-client start:mqtt-broker start:esp-pir-manager",
+    "########################": "########################",
     "docker:build:all:dev": "docker-compose build",
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose up -d",
@@ -39,6 +40,10 @@
     "start:api-gateway": "nx serve api-gateway",
     "build:api-gateway": "nx build api-gateway",
     "docker:api-gateway": "docker build -t api-gateway -f apps/api-gateway/Dockerfile .",
+    "########################": "########################",
+    "vendor": "node vendor/index.js",
+    "vendor:all": "rm -rf dist && nx run-many --target=build --all --sourceMap=false && npm run vendor",
+    "########################": "########################",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -101,6 +106,7 @@
     "@nrwl/workspace": "10.3.1",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
+    "@vercel/ncc": "^0.25.1",
     "codelyzer": "~5.0.1",
     "eslint": "7.10.0",
     "jest": "26.2.2",
