--- a/apps/alexa-connector/Dockerfile
+++ b/apps/alexa-connector/Dockerfile
@@ -1,39 +1,38 @@
+ARG SERVICE_NAME=alexa-connector
+
 ######################################################################
-FROM node:14-alpine as all-deps
+FROM node:14-alpine as build
 ######################################################################
 WORKDIR /app
+
 COPY package.json yarn.lock decorate-angular-cli.js ./
 RUN export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && npm install
-
-######################################################################
-FROM node:14-alpine as builder
-######################################################################
-WORKDIR /app
 COPY . .
-COPY --from=all-deps /app/node_modules /app/node_modules
+
 # specific:
 ARG PRODUCTION
-RUN if [ "$PRODUCTION" = "true" ]; then npm run build:alexa-connector -- --prod; else npm run build:alexa-connector; fi
+ARG SERVICE_NAME
+RUN if [ "$PRODUCTION" = "true" ]; then npm run build:$SERVICE_NAME -- --prod; else npm run build:$SERVICE_NAME; fi
 
-######################################################################
-FROM node:14-alpine as prod-deps
-######################################################################
-WORKDIR /app
-COPY package.json package-lock.json /app/
-# RUN npm install --prod --ignore-scripts
-RUN npm ci --production --ignore-scripts && npm cache clean --force
+RUN npm run vendor
 
 ######################################################################
 FROM node:14-alpine
 ######################################################################
 WORKDIR /app
-COPY --from=prod-deps /app/node_modules /app/node_modules
+
 COPY .env /app/.env
+
 # specific:
-COPY --from=builder /app/dist/apps/alexa-connector /app
-# specific:
-RUN apk update && apk add curl jq oath-toolkit-oathtool tzdata
+ARG SERVICE_NAME
+COPY --from=build /app/dist/apps/$SERVICE_NAME/vendorApp /app
+COPY --from=build /app/dist/apps/$SERVICE_NAME/assets /app/assets
+
 # specific:
 RUN chmod +x /app/assets/alexa-remote-control/alexa_remote_control.sh
+
+# specific:
+RUN apk update && apk add curl jq oath-toolkit-oathtool tzdata
+
 ENV TZ=Europe/Berlin
-CMD ["node", "./main.js"]
+CMD ["node", "./index.js"]
