--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -14,7 +14,7 @@ ARG PRODUCTION
 ARG SERVICE_NAME
 RUN if [ "$PRODUCTION" = "true" ]; then npm run build:$SERVICE_NAME -- --prod; else npm run build:$SERVICE_NAME; fi
 
-RUN npm run vendor
+RUN npm run ncc:$SERVICE_NAME
 
 ######################################################################
 FROM node:14-alpine
@@ -28,7 +28,7 @@ COPY ssh /app/ssh
 
 # specific:
 ARG SERVICE_NAME
-COPY --from=build /app/dist/apps/$SERVICE_NAME/vendorApp /app
+COPY --from=build /app/dist/apps/$SERVICE_NAME/vendor /app
 
 RUN apk update && apk add tzdata
 ENV TZ=Europe/Berlin
