added socketio; prepared client for triggering pio builds

--- a/package.json
+++ b/package.json
@@ -7,53 +7,44 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
     "start": "run-p start:mqtt-client start:mqtt-broker start:esp-pir-manager",
-
     "docker:build:all:dev": "docker-compose build",
     "docker:build:all:prod": "docker-compose build --build-arg PRODUCTION=true",
     "docker:start:all:dev": "npm run docker:build:all:dev && docker-compose up -d",
     "docker:start:all:prod": "npm run docker:build:all:prod && docker-compose up -d",
-
     "start:mqtt-client": "nx serve mqtt-client",
     "build:mqtt-client": "nx build mqtt-client",
     "test:mqtt-client": "nx test mqtt-client",
     "docker:mqtt-client": "docker build -t mqtt-client -f apps/mqtt-client/Dockerfile .",
-
     "start:mqtt-broker": "nx serve mqtt-broker",
     "build:mqtt-broker": "nx build mqtt-broker",
     "test:mqtt-broker": "nx test mqtt-broker",
     "docker:mqtt-broker": "docker build -t mqtt-broker -f apps/mqtt-broker/Dockerfile .",
     "ncc:mqtt-broker": "ncc build dist/apps/mqtt-broker/main.js -m -C -o dist/apps/mqtt-broker/vendor",
-
     "start:esp-pir-manager": "nx serve esp-pir-manager",
     "build:esp-pir-manager": "nx build esp-pir-manager",
     "test:esp-pir-manager": "nx test esp-pir-manager",
     "docker:esp-pir-manager": "docker build -t esp-pir-manager -f apps/esp-pir-manager/Dockerfile .",
     "ncc:esp-pir-manager": "ncc build dist/apps/esp-pir-manager/main.js -m -C -o dist/apps/esp-pir-manager/vendor",
-
     "start:esp-update-server": "nx serve esp-update-server",
     "build:esp-update-server": "nx build esp-update-server",
     "test:esp-update-server": "nx test esp-update-server",
     "docker:esp-update-server": "docker build -t esp-update-server -f apps/esp-update-server/Dockerfile .",
     "ncc:esp-update-server": "ncc build dist/apps/esp-update-server/main.js -m -C -o dist/apps/esp-update-server/vendor",
-
     "start:alexa-connector": "npm run create-env:alexa-connector && nx serve alexa-connector",
     "build:alexa-connector": "npm run create-env:alexa-connector && nx build alexa-connector",
     "test:alexa-connector": "nx test alexa-connector",
     "create-env:alexa-connector": "node apps/alexa-connector/create-env.js",
     "docker:alexa-connector": "docker build -t alexa-connector -f apps/alexa-connector/Dockerfile .",
     "ncc:alexa-connector": "ncc build dist/apps/alexa-connector/main.js -m -C -o dist/apps/alexa-connector/vendor",
-
     "start:adesso-commuter-server": "nx serve adesso-commuter-server",
     "build:adesso-commuter-server": "nx build adesso-commuter-server",
     "test:adesso-commuter-server": "nx test adesso-commuter-server",
     "docker:adesso-commuter-server": "docker build -t adesso-commuter-server -f apps/adesso-commuter-server/Dockerfile .",
     "ncc:adesso-commuter-server": "ncc build dist/apps/adesso-commuter-server/main.js -m -C -o dist/apps/adesso-commuter-server/vendor",
-
     "start:api-gateway": "nx serve api-gateway",
     "build:api-gateway": "nx build api-gateway",
     "docker:api-gateway": "docker build -t api-gateway -f apps/api-gateway/Dockerfile .",
     "ncc:api-gateway": "ncc build dist/apps/api-gateway/main.js -m -C -o dist/apps/api-gateway/vendor",
-
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
     "affected:apps": "nx affected:apps",
@@ -100,6 +91,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "serve-index": "^1.9.1",
+    "socket.io": "^3.0.1",
+    "socket.io-client": "^3.0.1",
     "typescript-ioc": "^3.2.2",
     "websocket-stream": "^5.5.2",
     "zone.js": "^0.10.2"
@@ -116,6 +109,7 @@
     "@nrwl/workspace": "10.3.1",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
+    "@types/socket.io": "^2.1.11",
     "@vercel/ncc": "^0.25.1",
     "codelyzer": "~5.0.1",
     "eslint": "7.10.0",
