esp-update-server can handle pio builds

--- a/apps/esp-update-server/Dockerfile
+++ b/apps/esp-update-server/Dockerfile
@@ -17,9 +17,38 @@ RUN if [ "$PRODUCTION" = "true" ]; then npm run build:$SERVICE_NAME -- --prod; e
 RUN npm run ncc:$SERVICE_NAME
 
 ######################################################################
-FROM node:14-alpine
+# We cannot use Apline image here because it's missing some dependencies, needed for pio to work
+FROM node:14
 ######################################################################
 WORKDIR /app
+
+# set ENV variables to make Python3 work properly
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8
+
+# Python3.x
+# RUN apk update && apk add tzdata py3-pip git curl
+# RUN curl -fsSL https://raw.githubusercontent.com/platformio/platformio-core-installer/master/get-platformio.py -o get-platformio.py
+# RUN python3 get-platformio.py
+
+# Python2.7
+# RUN apk update && apk add tzdata py-pip git curl
+# RUN curl -fsSL https://raw.githubusercontent.com/platformio/platformio-core-installer/master/get-platformio.py -o get-platformio.py
+# RUN python get-platformio.py
+
+RUN apt-get update && apt-get install -y tzdata python3-pip git curl
+
+# https://docs.platformio.org/en/latest/core/installation.html#super-quick-mac-linux
+RUN curl -fsSL https://raw.githubusercontent.com/platformio/platformio-core-installer/master/get-platformio.py -o get-platformio.py
+RUN python3 get-platformio.py
+RUN rm get-platformio.py
+
+# https://docs.platformio.org/en/latest/core/installation.html#install-shell-commands
+RUN ln -s ~/.platformio/penv/bin/platformio /usr/local/bin/platformio \
+    && ln -s ~/.platformio/penv/bin/pio /usr/local/bin/pio \
+    && ln -s ~/.platformio/penv/bin/piodebuggdb /usr/local/bin/piodebuggdb
+
+RUN cd .. && mkdir esp-projects && cd esp-projects && git clone https://github.com/pschild/esp-motion-sensor
 
 COPY .env /app/.env
 
@@ -27,6 +56,6 @@ COPY .env /app/.env
 ARG SERVICE_NAME
 COPY --from=build /app/dist/apps/$SERVICE_NAME/vendor /app
 
-RUN apk update && apk add tzdata
 ENV TZ=Europe/Berlin
 CMD ["node", "./index.js"]
+# ENTRYPOINT ["tail", "-f", "/dev/null"]
