implemented git and github managers

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,6 @@ SERVICE_SECRET=some-very-secret-string
 AMAZON_EMAIL=amazon_account@email.address
 AMAZON_PASSWORD=Very_Secret_Amazon_Account_Password
 AMAZON_MFA_SECRET=1234 5678 9ABC DEFG HIJK LMNO PQRS TUVW XYZ0 1234 5678 9ABC DEFG
+WIFI_SSID=My FRITZ!Box 1234
+WIFI_PASS=topsecret
+GITHUB_ACCESS_TOKEN=yoursupersecretaccesstoken
