--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/node": "^14.14.0",
     "aedes": "^0.43.0",
     "async-mqtt": "^2.6.1",
+    "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
@@ -84,6 +85,7 @@
     "dotenv": "^8.2.0",
     "express": "4.17.1",
     "express-jwt": "^6.0.0",
+    "fs-extra": "^9.0.1",
     "http-proxy-middleware": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
     "ngx-mqtt": "^7.0.14",
