--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
                   "with": "apps/mqtt-client/src/environments/environment.prod.ts"
                 }
               ],
-              "optimization": true,
+              "optimization": false,
               "outputHashing": "all",
               "sourceMap": false,
               "extractCss": true,
