added suncalc2 to replace API call

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,6 @@ AMAZON_MFA_SECRET=1234 5678 9ABC DEFG HIJK LMNO PQRS TUVW XYZ0 1234 5678 9ABC DE
 WIFI_SSID=My FRITZ!Box 1234
 WIFI_PASS=topsecret
 GITHUB_ACCESS_TOKEN=yoursupersecretaccesstoken
+OPEN_WEATHER_MAP_APP_ID=yoursupersecretappid
+HOME_POSITION_LAT=52.5069704
+HOME_POSITION_LON=13.2846503
